@@ -14,3 +14,4 @@
 - Added `clio_oauth_app.py` for OAuth login and token capture.
 - Added token-file support and refresh handling in `clio_templates_sync.py`.
 - Added `Flask` dependency for the OAuth helper app.
+- Added optional HTTPS support for the local OAuth helper.
